add room updating

--- a/site/index.html
+++ b/site/index.html
@@ -11,6 +11,7 @@
 			<button type="button" id="rename" onclick="changeUsername()"> Change </button>
 		</div>
 		<div id="room_entry">
+			<div id="room_code_box" style="display:none"> Current Room Code: <span id="room_code"></span> </div>
 			<label for="room"> Room Code: </label>
 			<input type="text" id="room" />
 			<button type="button" id="join" onclick="joinRoom()"> Join </button>
